--- a/messaging_app/.env
+++ b/messaging_app/.env
@@ -1,5 +1,10 @@
+# Global App Configuration
+APP_ENV=local
 DEBUG=True
 SECRET_KEY=django-insecure-%$ktjvgyzy8ml2*4q27_=5i99lplo+w4*f619lkfx        c$*x$6^t#
+
+
+# Local Database Settings
 ALLOWED_HOSTS=127.0.0.1,localhost
 
 DB_NAME=messaging_db
@@ -11,3 +16,12 @@ DB_PORT=3306
 
 CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
 # CELERY_BROKER_URL=amqp://myuser:mypassword@rabbitmq-host:5672/myvhost
+
+# Docker Database Settings
+DOCKER_DB_NAME=messaging_db
+DOCKER_DB_USER=mess_user
+DOCKER_DB_PASSWORD=Dafeovuor!e@70
+DOCKER_DB_ROOT_PASSWORD=ovuoR!eDafe@70
+# "db" is the service name in docker-compose.yml
+DOCKER_DB_HOST=db
+DOCKER_DB_PORT=3306
