--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
     environment:
-      - MYSQL_DATABASE=${DOCKER_DB_NAME}
+      - MYSQL_DB=${DOCKER_DB_NAME}
       - MYSQL_USER=${DOCKER_DB_USER}
       - MYSQL_PASSWORD=${DOCKER_DB_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${DOCKER_DB_ROOT_PASSWORD}
@@ -19,7 +19,7 @@ services:
 
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
     container_name: messaging_app
     volumes:
       - .:/app
